src/index.css
@font-face {
  font-family: "rubik";
  src: url("/Rubik_Glitch/RubikGlitch-Regular.ttf");
}
@font-face {
  font-family: "pacifico";
  src: url("/Pacifico/Pacifico-Regular.ttf");
}
@font-face {
  font-family: "gurajada";
  src: url("/Gurajada/Gurajada-Regular.ttf");
}
@font-face {
  font-family: "rubik-shadow";
  src: url("/Rubik_Doodle_Shadow/RubikDoodleShadow-Regular.ttf");
}
@font-face {
  font-family: "big";
  src: url("/Bigshot_One/BigshotOne-Regular.ttf");
}
#root {
  background-image: url("/background.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100vh;
  max-width: 650px;
  position: relative;
}
.head {
  font-family: "rubik-shadow";
  letter-spacing: 2px;
  text-transform: uppercase;
}

.weather-img {
  width: 150px;
  height: 150px;
}

.default {
  font-family: "rubik";
  height: 10rem;
  display: flex;
  justify-content: center;
  flex-direction: column;
  background-image: url("/update.webp");
  background-size: cover;
  font-size: 2.5rem;
}
.empty {
  display: none;
}

.weather-detail {
  /* font-family: "pacifico"; */
  font-size: 1.2rem;
  gap: 10px;
}
form {
  display: flex;
  position: relative;
}
input {
  appearance: none;
  height: 35px;
  width: 100%;
  border-radius: 10px;
  padding: 5px;
  border: 1px solid white;
}
.search-btn {
  position: absolute;
  right: 10px;
  top: 15%;
}
.search-btn img {
  width: 25px;
}
.location {
  font-family: "gurajada";
  font-size: 3rem;
}
.temp {
  font-family: "rubik-shadow";
  font-size: 3rem;
}
.celcius {
  font-family: initial;
  font-size: inherit;
}
.hr {
  font-size: 1rem;
}
.info {
  color: rgb(23 44 125);
  font-weight: bolder;
  font-size: 1.2rem;
}
.details {
  font-family: "big";
  font-size: 2rem;
  color: rgb(23 44 125);
}

footer {
  position: absolute;
  bottom: 0px;
  left: 0px;
}
footer img {
  width: 30px;
}
.img-container > :first-child {
  border: 1.9px solid white;
  border-radius: 1px;
}
.img-container {
  gap: 10px;
  justify-content: center;
}

/* forecasts */
.forecast-heading {
  font-family: "gurajada";
  font-size: 2rem;
}
.forecasts-container {
  min-height: 100px;
  margin-bottom: 3rem;
}
.fore-col {
  gap: 5px;
}
.fore-col p {
  font-size: 1.2rem;
}
@media (max-width: 450px) {
  * {
    font-size: 14px;
  }
}

